--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "axios": "^1.9.0",
     "firebase": "^11.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
