--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "firebase": "^11.6.1",
     "react": "^18.2.0",
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.2"
   }
 }
