--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^16.18.126",
     "@types/react-dom": "^19.1.2",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
